Poster: fix extra details colors and spacing

--- a/src/vars.scss
+++ b/src/vars.scss
@@ -9,7 +9,7 @@
   --rating-color: black;
   --placeholder-color: #8e8e8e;
   --poster-rating-color: gold;
-  --poster-extra-detail-bg-color: rgba(128, 128, 128, 0.25);
+  --poster-extra-detail-bg-color: rgba(46, 46, 46, 0.5);
 }
 
 :root.theme-dark {
